chore(*): update env example

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,8 @@
 PORT=80
-APP_URL=http://project.localhost:3000
-DATABASE_URI=mongodb://mongodb:27017/mern
+APP_URL=http://chillzone.localhost:3000
+
+DATABASE_URI=postgresql://postgres:postgres@postgres:5432/chillzone-db
+REDIS_URI=redis://:redis@redis:6379
 
 ACCESS_TOKEN_SECRET=<your access token secret>
 REFRESH_TOKEN_SECRET=<your refresh token secret>
