--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-DOMAIN=kanjigami.localhost
+DOMAIN=chillzone.localhost
 PORT=3000
 
-COMPOSE_PROJECT_NAME=kanjigami
+COMPOSE_PROJECT_NAME=chillzone
 TRAEFIK_DOMAIN=traefik.localhost
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=kanjigami-db
+POSTGRES_DB=chillzone-db
 
 REDIS_PORT=6379
 REDIS_PASSWORD=redis
