--- a/web/.env.example
+++ b/web/.env.example
@@ -1,5 +1,7 @@
 VITE_NODE_ENV=development
 VITE_API_URL=http://chillzone.localhost:3000/api
+COLLECTOR_URL=http://snowplow.localhost:3000/
+
 
 VITE_FIREBASE_APP_ID=
 VITE_FIREBASE_API_KEY=
