--- a/web/package.json
+++ b/web/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@snowplow/browser-plugin-link-click-tracking": "^3.19.0",
+    "@snowplow/browser-tracker": "^3.19.0",
     "antd": "^5.7.0",
     "firebase": "^10.0.0",
     "framer-motion": "^10.12.21",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "usehooks-ts": "^2.9.1"
