--- a/snowplow/collector.conf
+++ b/snowplow/collector.conf
@@ -75,9 +75,9 @@ collector {
   }
 
   streams {
-    good = ""
+    good = "good"
 
-    bad = ""
+    bad = "bad"
 
     useIpAddressAsPartitionKey = false
 
