--- a/loader-kafka/docker-compose.yml
+++ b/loader-kafka/docker-compose.yml
@@ -9,11 +9,12 @@ services:
   kafka:
     image: bitnami/kafka:latest
     ports:
-      - 9092:9092
+      - "9091:9091"
     environment:
       - KAFKA_BROKER_ID=1
       - KAFKA_LISTENERS=PLAINTEXT://:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
