--- a/loader-kafka/package.json
+++ b/loader-kafka/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3",
     "mongoose-sequence": "^5.3.1"
   }
