--- a/loader-kafka/package.json
+++ b/loader-kafka/package.json
@@ -16,6 +16,7 @@
     "prettier": "^3.1.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
