--- a/loader-kafka/package.json
+++ b/loader-kafka/package.json
@@ -16,11 +16,13 @@
     "prettier": "^3.1.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3",
     "mongoose-sequence": "^5.3.1"
   }
