--- a/loader-kafka/package.json
+++ b/loader-kafka/package.json
@@ -24,6 +24,7 @@
     "helmet": "^7.1.0",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.0.3",
-    "mongoose-sequence": "^5.3.1"
+    "mongoose-sequence": "^5.3.1",
+    "request": "^2.88.2"
   }
 }
