feat(metabase): setup metabase

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,22 @@ PORT=3000
 
 COMPOSE_PROJECT_NAME=chillzone
 TRAEFIK_DOMAIN=traefik.localhost
+SNOWPLOW_DOMAIN=snowplow.localhost
+
+IGLU_DOMAIN=iglu.localhost
+IGLU_SUPER_API_KEY=5fb4713d-73ad-4163-93a9-2b82f0177c5b
+IGLU_DB_PASSWORD=postgres
+
+KAFKA_DOMAIN=kafka.localhost
+LOADER_DOMAIN=loader.localhost
+
+METABASE_DOMAIN=metabase.localhost
+METABASE_PASSWORD=Chillzone1234
 
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DB=chillzone-db
+POSTGRES_DB=igludb
 
 REDIS_PORT=6379
 REDIS_PASSWORD=redis
