--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -181,10 +181,12 @@ services:
   metabase:
     image: metabase/metabase:v0.48.0
     restart: unless-stopped
-    volumes:
-      - ./.data/metabase:/metabase-data
     ports:
       - 3500:3000
+    volumes:
+      - ./.data/metabase:/metabase-data
+    environment:
+      - MB_DB_FILE=/metabase-data/metabase.db
     links:
       - mongodb
     depends_on:
